letter spacing fix3

--- a/css/121213.css
+++ b/css/121213.css
@@ -82,7 +82,7 @@ body {
     text-align: center;
 }
 
-h1{font-size: 130px;letter-spacing: -6px;}
+h1{font-size: 130px;letter-spacing: -4px;}
 h2{font-size: 90px;}
 h3{font-size: 70px;}
 h4{font-size: 50px;}
@@ -100,7 +100,7 @@ strong{
 
 super{
     font-size: 200px;
-    letter-spacing: -10px;
+    letter-spacing: -6px;
 }
 
 i, em { font-style: italic; }
